--- a/base/CODEC/Makefile.am
+++ b/base/CODEC/Makefile.am
@@ -3,6 +3,8 @@
 ## you have all needed files, that a GNU package needs
 AUTOMAKE_OPTIONS = foreign 1.5
 
+AC_CONFIG_MACRO_DIR([m4])
+
 ## define that we want building in SUBDIRS. To prevent automake
 ## to build the subdirs first, the '.' needs to be included
 SUBDIRS = .
